:bug: :lipstick: Fix vertical align issue

--- a/src/components/map/slot-list.scss
+++ b/src/components/map/slot-list.scss
@@ -19,6 +19,7 @@
 
   .slot-list-item {
     display: inline-flex;
+    vertical-align: top;
 
     &:not(:last-of-type) {
       margin-right: 16px;
